# shiviz_px4_nav

./: .clang-format  .dockerignore  .flake8  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  package.xml
config/: README.md
docker/: .bashrc  README.md  SIMPLE_DEPLOYMENT.md  build.sh  deploy.sh  interactive-deploy.sh  local-deploy.sh  simple-deploy.sh
include/waypoint_navigator/: waypoint_navigator.hpp
launch/: px4_offboard.launch
scripts/: README.md  VilotaSoftwareInstaller_v2.0-bba1a93f.py
src/: VilotaSoftwareInstaller_v2.0-bba1a93f.py  ecal.ini  main.cpp  odom.py  waypoint_navigator.cpp
src/px4_offboard_node/: CMakeLists.txt  main.cpp  package.xml
src/px4_offboard_node/launch/: px4_offboard.launch
src/px4_offboard_node/src/: waypoint_navigator.cpp
src/px4ctrl/: .clang-format
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  px4ctrl_node.cpp
tools/: odom.py
